--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h1>Hello World!</h1>
+<html>
+<head>
+  <title>Title of the document</title>
+</head>
 
+<body>
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
+</body>
+
+</html>
