--- a/index.html
+++ b/index.html
@@ -1,123 +1,66 @@
----
-layout: default
----
-
-Text can be **bold**, _italic_, or ~~strikethrough~~.
-
-[Link to another page](./another-page.html).
-
-There should be whitespace between paragraphs.
-
-There should be whitespace between paragraphs. We recommend including a README, or a file with information about your project.
-
-# Header 1
-
-This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.
-
-## Header 2
-
-> This is a blockquote following a header.
->
-> When something is important enough, you do it even if the odds are not in your favor.
-
-### Header 3
-
-```js
-// Javascript code with syntax highlighting.
-var fun = function lang(l) {
-  dateformat.i18n = require('./lang/' + l)
-  return true;
-}
-```
-
-```ruby
-# Ruby code with syntax highlighting
-GitHubPages::Dependencies.gems.each do |gem, version|
-  s.add_dependency(gem, "= #{version}")
-end
-```
-
-#### Header 4
-
-*   This is an unordered list following a header.
-*   This is an unordered list following a header.
-*   This is an unordered list following a header.
-
-##### Header 5
-
-1.  This is an ordered list following a header.
-2.  This is an ordered list following a header.
-3.  This is an ordered list following a header.
-
-###### Header 6
-
-| head1        | head two          | three |
-|:-------------|:------------------|:------|
-| ok           | good swedish fish | nice  |
-| out of stock | good and plenty   | nice  |
-| ok           | good `oreos`      | hmm   |
-| ok           | good `zoute` drop | yumm  |
-
-### There's a horizontal rule below this.
-
-* * *
-
-### Here is an unordered list:
-
-*   Item foo
-*   Item bar
-*   Item baz
-*   Item zip
-
-### And an ordered list:
-
-1.  Item one
-1.  Item two
-1.  Item three
-1.  Item four
-
-### And a nested list:
-
-- level 1 item
-  - level 2 item
-  - level 2 item
-    - level 3 item
-    - level 3 item
-- level 1 item
-  - level 2 item
-  - level 2 item
-  - level 2 item
-- level 1 item
-  - level 2 item
-  - level 2 item
-- level 1 item
-
-### Small image
-
-![Octocat](https://github.githubassets.com/images/icons/emoji/octocat.png)
-
-### Large image
-
-![Branching](https://guides.github.com/activities/hello-world/branching.png)
-
-
-### Definition lists can be used with HTML syntax.
-
-<dl>
-<dt>Name</dt>
-<dd>Godzilla</dd>
-<dt>Born</dt>
-<dd>1952</dd>
-<dt>Birthplace</dt>
-<dd>Japan</dd>
-<dt>Color</dt>
-<dd>Green</dd>
-</dl>
-
-```
-Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.
-```
-
-```
-The final element.
-```
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>KG4Vis: A Knowledge Graph-Based Approach for Visualization Recommendation</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link href="./css/bootstrap.css" rel="stylesheet">
+        <link href="./css/slider.css" rel="stylesheet">
+        <link href="./css/box.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="main">
+            <div class="container content_resize">
+                <div class="row">
+                    <div class="span10">
+                        <div id="header">
+                            <h1 style="padding-left:0; color:black;font-size:30px"><i>KG4Vis</i>: A Knowledge Graph-Based Approach for Visualization Recommendation</h1>
+                            <h4 style="padding-left: 0">
+                                <a href="https://haotian-li.com/" target="_blank">Haotian Li</a>
+                                , <a href="http://yong-wang.org/" target="_blank">Yong Wang</a>
+                                , <a href="" target="_blank">Songheng Zhang</a>
+                                , <a href="https://www.cse.ust.hk/~yqsong/" target="_blank">Yangqiu Song</a>
+                                , <a href="http://huamin.org/" target="_blank">Huamin Qu</a>
+                            </h4>
+                        </div>
+                        <br>
+                        <div id="figures">
+                            <img alt="" src="./files/Teaser.png" class="img-polaroid img-responsive img-thumbnail" style="margin-left: 7%" width="80%">
+                            <p style="text-align:justify; margin-top: 20px;">This figure illustrates the overall workflow of KG4Vis. We extract features from existing dataset-visualization pairs and construct a knowledge graph (KG). Then the embeddings of entities and relations in the KG are learned. Based on the embeddings, we conduct inference on a new dataset and finally recommend multiple visualizations. Also, various rules are extracted based on the embeddings and presented together with recommended visualizations to improve the interpretability of visualization recommendation.</p>
+                        </div>
+                        <div id="description">
+                            <h3>Description</h3>
+                            <p style="text-align:justify">Visualization recommendation or automatic visualization generation can significantly lower the barriers for general users to rapidly create effective data visualizations, especially for those users without a background in data visualizations. However, existing rule-based approaches require tedious manual specifications of visualization rules by visualization experts. Other machine learning-based approaches often work like black-box and are difficult to understand why a specific visualization is recommended, limiting the wider adoption of these approaches. This paper fills the gap by presenting <i>KG4Vis</i>, a knowledge graph (KG)-based approach for visualization recommendation. It does not require manual specifications of visualization rules and can also guarantee good explainability. Specifically, we propose a framework for building knowledge graphs, consisting of three types of entities (i.e., data features, data columns and visualization design choices) and the relations between them, to model the mapping rules between data and effective visualizations. A TransE-based embedding technique is employed to learn the embeddings of both entities and relations of the knowledge graph from existing dataset-visualization pairs. Such embeddings intrinsically model the desirable visualization rules. Then, given a new dataset, effective visualizations can be inferred from the knowledge graph with semantically meaningful rules. We conducted extensive evaluations to assess the proposed approach, including quantitative comparisons, case studies and expert interviews. The results demonstrate the effectiveness of our approach. </p>
+                        </div>
+                        <div id="materials">
+                            <h3>Materials</h3>
+                            <div class="materials">
+                                <a href="https://arxiv.org/pdf/2107.12548.pdf" class="link" target="_blank">PDF</a>
+                                | <a href="https://github.com/KG4VIS/Knowledge-Graph-4-VIS-Recommendation" class="link" target="_blank">GitHub</a>
+                                | <a href="./files/kg4vis_supple.pdf" class="link" target="_blank">Supplementary</a>
+                                | <a href="./files/kg4vis_poster.pdf" class="link" target="_blank">Poster</a>
+                                | <a href="https://kg4vis.s3.us-east-2.amazonaws.com/corpus.zip" class="link" target="_blank">Corpus</a>
+                                | <a href="https://kg4vis.s3.us-east-2.amazonaws.com/feature.zip" class="link" target="_blank">Features</a>
+                            </div>
+                        </div>
+                        <div id="publication">
+                            <h3>Publication</h3>
+                            <p>Haotian Li, Yong Wang, Songheng Zhang, Yangqiu Song and Huamin Qu. 2021. KG4Vis: A Knowledge Graph-Based Approach for Visualization Recommendation. IEEE Transactions on Visualization and Computer Graphics (Proceedings of IEEE VIS 2021). To Appear.</p>
+                        </div>
+                        <div id="acknowledgements">
+                            <h3>Acknowledgements</h3>
+                            <p>This research was supported by the Singapore Ministry of Education (MOE) Academic Research Fund (AcRF) Tier 1 grant (Grant number: 20-C220-SMU-011). We would like to thank the experts in our expert interviews and anonymous reviewers for their feedback. We also would like to thank <a href="http://kzh.space/" class="link" target="_blank">Dr. Kevin Hu</a> for granting us the permission of using and open-sourcing the code and dataset in <a href="https://vizml.media.mit.edu/" class="link" target="_blank">VizML</a>, and <a href="https://yz-cai.github.io/" class="link" target="_blank">Mr. Yuzheng Cai</a> for making the original version of the amazing poster in <a href="http://simingchen.me/" class="link" target="_blank">Dr. Siming Chen</a>'s visualization course in Fudan University.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer_resize">
+                    <p class="lf">Copyright © 2021 Haotian Li. All Rights Reserved.</p>
+                </div>
+                <div class="clr"></div>
+            </div>
+        </div>
+    </body>
+</html>
