change teaser.svg to png

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </div>
                         <br>
                         <div id="figures">
-                            <img alt="" src="./files/Teaser.svg" class="img-polaroid img-responsive img-thumbnail"  width="80%" style="margin-left: 7%">
+                            <img alt="" src="./files/Teaser.png" class="img-polaroid img-responsive img-thumbnail"  width="80%" style="margin-left: 7%">
                             <p style="text-align:justify; margin-top: 20px;">An example application scenario of our privacy-preserving visualization on a smartphone. The data owner (left side) in proximity can see the privacy-preserving visualization displayed on the smartphone, while the shoulder surfer (right side) at a far distance can not interpret the visualization content.</p>
                         </div>
                         <div id="description">
